--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,54 @@
+@font-face {
+    font-family: 'Helvetica';
+    src: url('../font/Helvetica-Bold.eot');
+    src: url('../font/Helvetica-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../font/Helvetica-Bold.woff2') format('woff2'),
+        url('../font/Helvetica-Bold.woff') format('woff'),
+        url('../font/Helvetica-Bold.ttf') format('truetype'),
+        url('../font/Helvetica-Bold.svg#Helvetica-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     text-align: center;
 }
 
 h1 {
     margin: 2.5rem 0;
+}
+
+.result_wrapper {
+    position: relative;
+    min-height: 1370px;
+    background: #cc28cc;
+    padding: 10px;
+}
+
+.result_wrapper .tokenimg {
+    width: 100%;
+}
+
+.result_wrapper .qrcode {
+    margin-bottom: 50px;
+}
+
+.result_wrapper .info_wrapper {
+    padding: 0 50px;
+}
+
+.result_wrapper .info_wrapper p {
+    font-family: 'Helvetica';
+    font-size: 25px;
+    color: white;
+}
+
+.result_wrapper .overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: multiply;
 }
