--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,12 +22,16 @@ h1 {
 .result_wrapper {
     position: relative;
     min-height: 1370px;
+    height: 1370px;
     background: #cc28cc;
     padding: 10px;
 }
 
 .result_wrapper .tokenimg {
-    width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .result_wrapper .qrcode {
@@ -42,6 +46,11 @@ h1 {
     font-family: 'Helvetica';
     font-size: 25px;
     color: white;
+}
+
+.result_wrapper .img-wrapper {
+    position: relative;
+    height: calc(100% - 325px);
 }
 
 .result_wrapper .overlay {
