--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,11 @@ h1 {
 .result_wrapper {
     position: relative;
     min-height: 1370px;
+    width: 830px;
     height: 1370px;
     background: #cc28cc;
     padding: 10px;
+    margin: 0 auto;
 }
 
 .result_wrapper .tokenimg {
