re-arrange text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ h1 {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    width: 90%;
 }
 
 .result_wrapper .qrcode {
@@ -44,15 +45,22 @@ h1 {
     padding: 0 50px;
 }
 
+
 .result_wrapper .info_wrapper p {
     font-family: 'Helvetica';
     font-size: 25px;
     color: white;
 }
 
+.result_wrapper .info_wrapper .for_center {
+    width: 160px;
+    margin: auto 0 auto auto;
+}
+
 .result_wrapper .img-wrapper {
     position: relative;
     height: calc(100% - 325px);
+    background: white;
 }
 
 .result_wrapper .overlay {
