--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ h1 {
     margin: 2.5rem 0;
 }
 
+.w-830 {
+    width: 830px;
+    padding: 0;
+}
+
 .result_wrapper {
     position: relative;
     min-height: 1370px;
@@ -26,15 +31,13 @@ h1 {
     height: 1370px;
     background: #cc28cc;
     padding: 10px;
-    margin: 0 auto;
-    display: none;
+    margin: 0;
 }
 
 .error_wrapper {
     width: 830px;
     margin: 0 auto;
     padding: 30px;
-    display: none;
 }
 
 .result_wrapper .tokenimg {
