--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,19 @@ h1 {
     width: 90%;
 }
 
+.result_wrapper .fee {
+    color: white;
+    font-family: 'Helvetica';
+    font-weight: bold;
+    font-size: 110px;
+    line-height: 140px;
+}
+
+.result_wrapper .logo {
+  width: 100%;
+  margin-top: -10px;
+}
+
 .result_wrapper .qrcode {
     margin: 0 10px 50px 0;
 }
@@ -56,13 +69,15 @@ h1 {
     padding: 0 50px;
 }
 
-
 .result_wrapper .info_wrapper p {
     font-family: 'Helvetica';
     font-size: 25px;
     color: white;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
+    min-height: 37px;
+    margin-bottom: 0px;
 }
 
 .result_wrapper .info_wrapper .for_center {
@@ -72,8 +87,9 @@ h1 {
 
 .result_wrapper .img-wrapper {
     position: relative;
-    height: calc(100% - 325px);
+    height: calc(100% - 305px);
     background: white;
+    margin-top: 20px;
 }
 
 .result_wrapper .overlay {
