--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,14 @@ h1 {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    min-height: 37px;
+    min-height: 30px;
     margin-bottom: 0px;
+}
+
+.result_wrapper .info_wrapper .address {
+  overflow: initial;
+  text-overflow: initial;
+  white-space: nowrap;
 }
 
 .result_wrapper .info_wrapper .for_center {
@@ -87,7 +93,7 @@ h1 {
 
 .result_wrapper .img-wrapper {
     position: relative;
-    height: calc(100% - 305px);
+    height: calc(100% - 298px);
     background: white;
     margin-top: 20px;
 }
