--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,13 +56,18 @@ h1 {
     line-height: 140px;
 }
 
+.result_wrapper .marks {
+  width: 95%;
+  margin-top: -12px;
+}
+
 .result_wrapper .logo {
   width: 100%;
   margin-top: -10px;
 }
 
 .result_wrapper .qrcode {
-    margin: 0 10px 50px 0;
+    margin: -2px 10px 50px 0;
 }
 
 .result_wrapper .info_wrapper {
