--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,8 @@ h1 {
     background: #cc28cc;
     padding: 10px;
     margin: 0;
+    margin-bottom: 20px;
+    box-shadow: 2px 1px 5px 1px #888888;
 }
 
 .error_wrapper {
@@ -98,7 +100,7 @@ h1 {
 
 .result_wrapper .img-wrapper {
     position: relative;
-    height: calc(100% - 298px);
+    height: calc(100% - 296px);
     background: white;
     margin-top: 20px;
 }
