added drop shadow effect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,21 +19,30 @@ h1 {
     margin: 2.5rem 0;
 }
 
-.w-830 {
-    width: 830px;
+.w-840 {
+    width: 840px;
     padding: 0;
 }
 
 .result_wrapper {
     position: relative;
-    min-height: 1370px;
-    width: 830px;
-    height: 1370px;
-    background: #cc28cc;
-    padding: 10px;
     margin: 0;
     margin-bottom: 20px;
-    box-shadow: 2px 1px 5px 1px #888888;
+    width: 840px;
+    height: 1380px;
+    background: white;
+}
+
+.real_wrapper {
+  position: absolute;
+  min-height: 1370px;
+  width: 830px;
+  height: 1370px;
+  background: #cc28cc;
+  padding: 10px;
+  box-shadow: 0px 0px 5px 1px #111111;
+  left: 0px;
+  top: 0px;
 }
 
 .error_wrapper {
